examples/bad/06-function_argument_type.latf
int g(int x) {
    return x + 1;
}

int main() {
    g(true); // error
    return 0;
}